# unLoKable

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md  release.sh  run  setup.bat  ucma.snd
.github/workflows/: rust.yml
adsheader/: Cargo.toml
adsheader/src/: main.rs
adsloopfind/: Cargo.toml
adsloopfind/src/: main.rs
adsloopfind/tests/: multichannel.ads  withloop.ads  withoutloop.ads
adsunloop/: Cargo.toml
adsunloop/src/: main.rs
adsunloop/tests/: pcm.ads
cds2seq/: Cargo.toml  run
cds2seq/src/: main.c  main.rs
cds2seq/tests/: 0term.cds  1term.cds  factorial.cds  filtering1.cds  longest.cds  more_term.cds  nothing.cds  oneloop.cds  simple.cds  test4.cds  test5.cds  test6.cds  test_info.cds  type0_marker.cds  (+2 more)
core/: Cargo.toml
demul/: Cargo.toml
demus/: Cargo.toml
desnd/: Cargo.toml
lib/: misc.c  misc.h  strings.h  structures.c  structures.h
lok_music_ripper/: Makefile
msqsplit/: Cargo.toml
notes/: MSQ_patch_dictionary_only_necessary.txt  MUS_file_format_v5.txt  SND_file_format_v2.txt  how_looping_in_QSMa_works.txt
seqrepeat/: Cargo.toml
sequence/: Cargo.toml
sf2panlaw/: Cargo.toml
sound/: Cargo.toml
src/: main.c  strings.h  structures.c  structures.h  structures_new_engine.h
tests/: 1_term.cds  SEQ.seq  VAG.vag  all_cases.cds  example.cds  factorial.seq  imp.cds  msq_example.msq  no_term.cds  nothing.cds  overland.sam  overland_00_00.cds  test7.cds  ucma.pmp  ucma.pnd  ucma.vab  unbalanced_2.cds
vabfine/: Cargo.toml
vabsmp/: Cargo.toml
vagheader/: Cargo.toml
vagsanitizer/: Cargo.toml
vagunloop/: Cargo.toml
(+62 files in other folders)
