[workspace]
resolver = "2"
members = [
    "adsheader",
    "adsloopfind",
    "adsunloop",
    "cds2seq",
    "demul",
    "demus",
    "desnd",
    "msqsplit",
    "seqrepeat",
    "sf2panlaw",
    "vabfine",
    "vabsmp",
    "vagheader",
    "vagsanitizer",
    "vagunloop",
]

[workspace.dependencies]
clap = { version = "4.5.13", features = ["derive"] }
simplelog = "0.12.2"
log = "0.4.22"
