[workspace]
resolver = "2"
members = [
    "core",

    "adsheader",
    "adsloopfind",
    "adsunloop",
    "cds2seq",
    "demul",
    "demus",
    "desnd",
    "msqsplit",
    "seqrepeat",
    "sf2panlaw",
    "vabfine",
    "vabsmp",
    "vagheader",
    "vagsanitizer",
    "vagunloop",
]

[workspace.dependencies]
clap = { version = "4.5.13", features = ["derive"] }
log = "0.4.22"
core = { path = "core" }
