[workspace]
resolver = "2"
members = [
    "core",
    "adsheader",
    "adsloopfind",
    "adsunloop",
    "cds2seq",
    "demul",
    "demus",
    "desnd",
    "msqsplit",
    "seqrepeat",
    "sf2panlaw",
    "vabfine",
    "vabsmp",
    "vagheader",
    "vagsanitizer",
    "vagunloop",
]

[workspace.dependencies]
core = { path = "core" }
